--- a/{{ cookiecutter.project_name }}/.gitmodules
+++ b/{{ cookiecutter.project_name }}/.gitmodules
@@ -1,7 +1,7 @@
-[submodule "addons_pro"]
-   path = addons_pro
-   url = git@git.desarrollo.minorisa.net:odoo/addons_pro.git
+# [submodule "addons_pro"]
+#   path = addons_pro
+#   url = git@git.desarrollo.minorisa.net:odoo/addons_pro.git
 
-[submodule "addons_{{cookiecutter.project_name}}"]
-    path = addons_customer
-    url = git@git.desarrollo.minorisa.net:odoo/addons_{{cookiecutter.project_name}}.git
+# [submodule "addons_{{cookiecutter.project_name}}"]
+#    path = addons_customer
+#    url = git@git.desarrollo.minorisa.net:odoo/addons_{{cookiecutter.project_name}}.git
